core-plugins/src/test/resources/scraper/test/plugins/core/typechecker/ok/log.yf
---
name: log
graphs:
  start:
    - type: Echo
      log: "Just a log message"
