core-plugins/src/test/resources/scraper/test/plugins/core/typechecker/fail/failflow.yf
---
name: fefe
graphs:

  start:
    - type: IfThenElse
      condition: true
      trueTarget: duplicate-post
      falseTarget: not-duplicate-post

  duplicate-post:
    - type: Echo

  not-duplicate-post:
    - type: Echo
      log:
        message: "{output}"
        recipients: "{recipient}"
